--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>JQuery CodePlayer</title>
-<link rel="stylesheet" href="CodeStyle.css" type="text/css" />
+<link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
 	<div id="wrapper">
@@ -38,6 +38,6 @@
         </div>
 	</div>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript"></script>
-<script src="CodeScript.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 </body>
 </html>
