--- a/index.html
+++ b/index.html
@@ -7,37 +7,35 @@
 </head>
 <body>
 	<div class="codeplayer">
-		<div class="codeplayer__nav">
+		<header class="codeplayer__nav">
     		<h1>say-codeplayer</h1>
-            <div id="btnDiv">
-            	<button id="runButton">Run</button>
+            <div class="codeplayer__button-container">
+            	<button class="codeplayer__button" id="runButton">Run</button>
             </div>
-            <ul id="codeplayer__toggles">
+            <nav class="codeplayer__toggles">
             	<li class="codeplayer__toggle codeplayer__toggle--selected">HTML</li>
                 <li class="codeplayer__toggle">CSS</li>
                 <li class="codeplayer__toggle">JS</li>
-                <li class="codeplayer__toggle codeplayer__toggle--selected" id="last">Result</li>
-            </ul>
-    	</div>
-        <div class="clear"></div>
+                <li class="codeplayer__toggle codeplayer__toggle--selected last">Result</li>
+            </nav>
+    	</header>
         <div class="codeplayer__player" id="HTMLContainer">
-        	<div class="codeLabel">HTML</div>
+        	<div class="codeplayer__label">HTML</div>
         	<textarea id="htmlCode">Example Code</textarea>
         </div>
         <div class="codeplayer__player" id="CSSContainer">
-        	<div class="codeLabel">CSS</div>
+        	<div class="codeplayer__label">CSS</div>
         	<textarea id="cssCode">Example Code</textarea>
         </div>
         <div class="codeplayer__player" id="JSContainer">
-        	<div class="codeLabel">JS</div>
+        	<div class="codeplayer__label">JS</div>
         	<textarea id="jsCode">Example Code</textarea>
         </div>
         <div class="codeplayer__player" id="ResultContainer">
-        	<div class="codeLabel">Results</div>
-            <iframe id="resultsFrame"></iframe>
+        	<div class="codeplayer__label">Results</div>
+            <iframe class="codeplayer__results" id="resultsFrame"></iframe>
         </div>
 	</div>
-<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript"></script>
-<script src="app.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
