update player styles

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         	<div class="codeplayer__label">JS</div>
         	<textarea id="jsCode">Example Code</textarea>
         </div>
-        <div class="codeplayer__player" id="ResultContainer">
+        <div class="codeplayer__player codeplayer__results" id="ResultsContainer">
         	<div class="codeplayer__label">Results</div>
-            <iframe class="codeplayer__results" id="resultsFrame"></iframe>
+            <iframe class="codeplayer__results-frame"></iframe>
         </div>
 	</div>
     <script src="app.js" type="text/javascript"></script>
